--- a/Code Smells.ipynb
+++ b/Code Smells.ipynb
@@ -30,7 +30,9 @@
    "source": [
     "# Repositórios Avaliados :\n",
     "-- Apache Commons Collections, versão 4.2 (https://github.com/apache/commons-collections)  \n",
-    "-- X-Stream, versão 1.4.11.1 (https://github.com/x-stream/xstream) "
+    "-- X-Stream, versão 1.4.11.1 (https://github.com/x-stream/xstream) \n",
+    "\n",
+    "## Smells avaliados : Long Method , Long classe , Feature Envy ,Innapropriate Intimancy , Shotgun Surgery e Divergent Change"
    ]
   },
   {
@@ -39,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Imports\n",
     "from pydriller import RepositoryMining\n",
     "from datetime import datetime "
    ]
@@ -72,7 +75,7 @@
    "metadata": {},
    "source": [
     "# Shotgun Surgery\n",
-    "##  Fazer qualquer modificação requer que você faça muitas pequenas alterações em várias classes diferentes."
+    "##  \"Fazer qualquer modificação requer que você faça muitas pequenas alterações em várias classes diferentes.\""
    ]
   },
   {
@@ -83,15 +86,10 @@
    "source": [
     "def shotgunSurgery(repo,from_date,to_date):\n",
     "  for commit in RepositoryMining(repo, since = from_date,to = to_date).traverse_commits():\n",
-    "    # print(\"Author {}\".format(commit.author.email))\n",
-    "    # print(\"with message {} on date {} TZ {} \".format(commit.msg,commit.author_date,commit.author_timezone))\n",
     "    l = []\n",
     "    for mod in commit.modifications:\n",
-    "        # print(mod.change_type.name)\n",
-    "        #print(f\"Commit hash {commit.hash}\")\n",
     "        if mod.change_type.name == \"MODIFY\":\n",
     "            l.append(mod.filename)\n",
-    "            #print(\"Modified file {} - {}\".format(mod.change_type.name,mod.filename))\n",
     "        if len(l) > 1:\n",
     "            print(f\"Commit : {commit.hash}\")\n",
     "            print(l)        \n",
@@ -1425,7 +1423,7 @@
    "metadata": {},
    "source": [
     "# Análise\n",
-    "O repositório possui indícios de Shotgun Surgery , por exemplo nas classe ['IterableUtils.java', 'TreeBidiMap.java', 'FunctorUtils.java', 'LazyIteratorChain.java'], temos mais de 2 commits que alteram sempre as mesmas classes , podendo alterar mais classes no processo . Outro ponto de Shotgun Surgery são os XMLs do projeto que sempre são alterados em conjusntos , exemplo ['site.xml', 'history.xml', 'index.xml', 'release_3_2.xml', 'release_3_2_1.xml', 'release_3_2_2.xml'].Outro ponto observado são commits que modificam uma grande quantidade de classes , sempre com classes repetidas.\n",
+    "O repositório possui indícios de Shotgun Surgery , por exemplo nas classe ['IterableUtils.java', 'TreeBidiMap.java', 'FunctorUtils.java', 'LazyIteratorChain.java'], temos mais de 2 commits que alteram sempre as mesmas classes , podendo alterar mais classes no processo . Outro ponto de Shotgun Surgery são os XMLs do projeto que sempre são alterados em conjunto , exemplo ['site.xml', 'history.xml', 'index.xml', 'release_3_2.xml', 'release_3_2_1.xml', 'release_3_2_2.xml'].Outro ponto observado são commits que modificam uma grande quantidade de classes , sempre com classes repetidas.\n",
     "\n",
     "PS: Foram analisados só os commits mais recentes , do meio de 2018 até a atual data"
    ]
@@ -2542,7 +2540,7 @@
    "metadata": {},
    "source": [
     "# Como foi feita a análise:\n",
-    "## Iteramos sobre os commits em um determinado intervalo de tempo , armazenando em uma lista as classes que foram modificadas pelo commit . Após isso olhamos os commits e verificamos as classes que se repetiam sempre juntas no commit "
+    "## Iteramos sobre os commits em um determinado intervalo de tempo , armazenando em uma lista as classes que foram modificadas pelo commit . Após isso olhamos os commits e verificamos as classes que se repetiam sempre juntas no commit."
    ]
   },
   {
@@ -2557,7 +2555,7 @@
    "metadata": {},
    "source": [
     "# Divergent Change \n",
-    "## Você se vê tendo que alterar muitos métodos não relacionados ao fazer alterações em uma classe. Por exemplo, ao adicionar um novo tipo de produto, é necessário alterar os métodos para localizar, exibir e solicitar produtos."
+    "## \"Você se vê tendo que alterar muitos métodos não relacionados ao fazer alterações em uma classe. Por exemplo, ao adicionar um novo tipo de produto, é necessário alterar os métodos para localizar, exibir e solicitar produtos.\""
    ]
   },
   {
@@ -2568,12 +2566,8 @@
    "source": [
     "def divergentChange(repo,from_date,to_date):\n",
     "  for commit in RepositoryMining(repo, since = from_date,to = to_date).traverse_commits():\n",
-    "    # print(\"Author {}\".format(commit.author.email))\n",
-    "    # print(\"with message {} on date {} TZ {} \".format(commit.msg,commit.author_date,commit.author_timezone))\n",
     "    l = []\n",
     "    for mod in commit.modifications:\n",
-    "        # print(mod.change_type.name)\n",
-    "        #print(f\"Commit hash {commit.hash}\")\n",
     "        if mod.change_type.name == \"MODIFY\":\n",
     "            if mod.filename.find('.txt') == -1:\n",
     "                l.append([mod.filename,mod.added,mod.removed,mod.nloc])\n",
@@ -4320,7 +4314,7 @@
    "source": [
     "# Análise\n",
     "\n",
-    "O Repositório na apresenta o smell Divergente Change , no caso vericamos os commits com modificações em uma única classe e ,por final, verificamos se a classe aparecia mais de uma vez com a razão de adicionadas ou removidas elevada ."
+    "O Repositório não apresenta o smell Divergente Change , no caso vericamos os commits com modificações em uma única classe e ,por final, verificamos se a classe aparecia mais de uma vez com a razão de adicionadas ou removidas elevada ."
    ]
   },
   {
@@ -5409,6 +5403,15 @@
     "from_date = datetime(2018,6,1)\n",
     "to_date = datetime(2019,11,30)\n",
     "divergentChange(\"https://github.com/x-stream/xstream\",from_date,to_date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análise\n",
+    "\n",
+    "O Repositório não apresenta o smell Divergente Change , no caso vericamos os commits com modificações em uma única classe e ,por final, verificamos se a classe aparecia mais de uma vez com a razão de adicionadas ou removidas elevada ."
    ]
   },
   {
