--- a/Code Smells.ipynb
+++ b/Code Smells.ipynb
@@ -5423,6 +5423,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparativo \n",
+    "\n",
+    "## Temos que os 2 projetos possuem perfis semelhantes , possuindo indícios de Shotgun Surgery e não tendo indícios do Divergente Change ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
