--- a/IntimacyEnvy/Jupyter/CodeSmellsIntimacy&Envy.ipynb
+++ b/IntimacyEnvy/Jupyter/CodeSmellsIntimacy&Envy.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -51,24 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -159,7 +157,7 @@
        "9     MultiMapUtils            12             3"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
